--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                 <div id=";" class="key row-3">;</div>
                 <div id="!" class="key row-3">!</div>
                 <div id="?" class="key row-3">?</div>
-                <div id="backs" class="key backs row3 rev-col">&larr;</div>
+                <div id="backs-3" class="key backs row3 rev-col">&larr;</div>
                 <div id="ABC" class="key nums row4 rev-col">ABC</div>
                 <div id="." class="key dot row4 rev-col">.</div>
-                <div id="space" class="key space row4">space</div>
+                <div id="space-3" class="key space row4">space</div>
                 <div id="," class="key komma row4 rev-col">,</div>
                 <div id="enter-3" class="key enter row4">&larrhk;</div>
             </div>
