--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="input">
                 <h2>Write something</h1>
-                <div class="input-field"></div>
+                <div class="input-field"><span class="input-span"></span><div class="blinky"></div></div>
             </div>
         </div>
         <div class="boards-container">
